--- a/src/i18n/messages/pl.json
+++ b/src/i18n/messages/pl.json
@@ -189,5 +189,6 @@
   "footer-created-by": "Strona stworzona przez",
   "api-status-error": "Wystąpił błąd.",
   "api-status-success": "Operacja zakończona sukcesem.",
-  "captcha-required": "Pole nie może być puste."
+  "captcha-required": "Pole nie może być puste.",
+  "captcha-fetching-error": "Wystąpił błąd podczas ładowania captcha."
 }
