--- a/src/i18n/messages/id.json
+++ b/src/i18n/messages/id.json
@@ -189,5 +189,6 @@
   "footer-created-by": "Situs dibuat oleh",
   "api-status-error": "Terjadi kesalahan.",
   "api-status-success": "Operasi berhasil.",
-  "captcha-required": "Captcha harus diselesaikan."
+  "captcha-required": "Captcha harus diselesaikan.",
+  "captcha-fetching-error": "Terjadi kesalahan saat memuat captcha."
 }
